# rust-opengl

./: Cargo.toml  README.md
examples/: gui.rs  teapot.rs
src/: camera.rs  common.rs  consts.rs  fragment_shader.glsl  lib.rs  main.rs  scene_object.rs  teapot.rs  types.rs  vertex_shader.glsl
src/shaders/: fragment_shader.glsl  vertex_shader.glsl
