[package]
name = "opengl-window"
version = "0.1.0"
authors = ["pseres <peet.seres@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.28"
nalgebra = "0.26.2"
find_folder = "0.3.0"
egui_glium = "0.11.0"

[profile.dev]
opt-level = 0
